--- a/templates/base.html
+++ b/templates/base.html
@@ -7,14 +7,16 @@
 </head>
 <body>
     <nav>
-        {% if current_user.is_authenticated %}
-        <a href="{{ url_for('index') }}">Home</a>
-        <a href="{{ url_for('logout') }}">Logout</a>
-        {% else %}
-        <a href="{{ url_for('login') }}">Login</a>
-        <a href="{{ url_for('register') }}">Register</a>
-        {% endif %}
-    </nav>
+		<a href="{{ url_for('index') }}">Home</a>
+		<a href="{{ url_for('submit_game') }}">Submit Game</a>
+		<a href="{{ url_for('view_games') }}">View Games</a>
+		{% if current_user.is_authenticated %}
+			<a href="{{ url_for('logout') }}">Logout</a>
+		{% else %}
+			<a href="{{ url_for('login') }}">Login</a>
+			<a href="{{ url_for('register') }}">Register</a>
+		{% endif %}
+	</nav>
     {% for message in get_flashed_messages() %}
     <div>
         {{ message }}
