--- a/static/styles.css
+++ b/static/styles.css
@@ -23,7 +23,7 @@ nav a:hover {
 .container {
     margin: 0 auto;
     max-width: 1200px;
-    padding: 2em;
+    padding: 1rem;
 }
 
 h1 {
@@ -32,9 +32,10 @@ h1 {
 }
 
 table {
-    border-collapse: collapse;
-    margin-bottom: 2em;
-    width: 100%;
+  max-width: 800px;
+  margin: 2rem auto;
+  border-collapse: collapse;
+  width: 100%;
 }
 
 th,
@@ -58,12 +59,6 @@ form p {
     margin-bottom: 1em;
 }
 
-form label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 0.5em;
-}
-
 form input[type="submit"] {
     background-color: #1d3557;
     border: none;
@@ -75,3 +70,29 @@ form input[type="submit"] {
 form input[type="submit"]:hover {
     background-color: #457b9d;
 }
+
+form {
+  max-width: 600px;
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+  border-radius: 6px;
+}
+
+form label {
+  text-align: left;
+  display: block;
+  width: 100%;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+
+form input {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
