--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,20 @@
 {% block content %}
     <h1>Welcome, {{ current_user.username }}!</h1>
     <h2>Game History</h2>
+	<div class="container">
     <table>
         <tr>
-            <th>Timestamp</th>
+            <th>Date</th>
             <th>Opponent</th>
             <th>Score</th>
         </tr>
         {% for game in games %}
         <tr>
-            <td>{{ game.timestamp }}</td>
+            <td>{{ game.timestamp.strftime('%m/%d/%y %H:%M') }}</td>
             <td>{{ game.opponent.username }}</td>
             <td>{{ game.player_score }} - {{ game.opponent_score }}</td>
         </tr>
         {% endfor %}
     </table>
+	</div>
 {% endblock %}
